--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -15,7 +15,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
           a.nav-link(href='/submit') 补充数据
       form(onsubmit= 'return false;' accept-charset="GB18030").d-flex.col-5
         input.form-control.me-2(type='search', name='name', id='autocomplete' placeholder='输入 角色/公司/联盟名称，稍等片刻' aria-label='Search')
-      ul.navbar-nav.mb-2.mb-lg-0.col.ps-2
+      ul.navbar-nav.mb-2.mb-lg-0.col-1
         li.nav-item
           .btn-group
             a.btn.btn-light(type="button" href="/info") 说明文档
@@ -30,7 +30,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
                 a.dropdown-item(href="/info#privacy") 数据隐私
               li
                 a.dropdown-item(href="/info#delay") 数据延迟
-      ul.navbar-nav.mb-2.mb-lg-0.col.ps-2
+      ul.navbar-nav.mb-2.mb-lg-0.col-1
         li.nav-item
           .btn-group
             a.btn.btn-light(type="button" href="/projects") 其它项目
@@ -39,7 +39,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
             ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
               li
                 a.dropdown-item(href="/projects#esam") ESAM
-      ul.navbar-nav.mb-2.mb-lg-0.col
+      ul.navbar-nav.mb-2.mb-lg-0.col-1
         li.nav-item
             a.btn.btn-success.donateBtn(type="button" href='/donate') 捐赠
       
