add gov record in footer

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,6 +36,9 @@ html
           a(href='https://github.com/mintnick') mintnick
           br
           | 本网站的游戏内数据，所有权属于CCP Games和网易游戏
+          br
+          a.me-3(href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=34020202000630" target="_blank") 皖公网安备 34020202000630号
+          a(href="https://beian.miit.gov.cn/" target="_blank") 皖ICP备2022011579号-1
 
     script(src='/javascripts/jquery-3.6.0.min.js')
     script(src='/javascripts/bootstrap/popper.min.js')
