add evehu timer info. edit readme

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -39,6 +39,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
             ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
               li
                 a.dropdown-item(href="/projects#esam") ESAM
+              li
+                a.dropdown-item(href="/projects#timer") 晨曦增强表
       ul.navbar-nav.mb-2.mb-lg-0.col-1
         li.nav-item
             a.btn.btn-success.donateBtn(type="button" href='/donate') 捐赠
