--- a/views/projects.pug
+++ b/views/projects.pug
@@ -12,3 +12,11 @@ block content
     | &nbsp&nbsp提取码：vu76
   p
     a(href="https://github.com/mintnick/ESAM" target="_blank") Github
+
+  h1#timer 晨曦增强表
+  h3 显示当前的主权和基础设施增强信息
+  h5 可过滤星域、联盟，并在争夺开始后实时更新进度
+  p
+    a(href="https://timer.evehu.cn" target="_blank") 网址：timer.evehu.cn
+  p
+    a(href="https://github.com/mintnick/evehu_timer" target="_blank") Github
