--- a/views/kb_cell.pug
+++ b/views/kb_cell.pug
@@ -2,7 +2,7 @@ mixin kb(type, id)
   if (type != undefined)
     if type == 'character'
       - type = 'pilot'
-      tr
-          td.align-center(colspan=2)
-            h5
-              a(href='https://beta.ceve-market.org/'+type+'/'+id+'/kill' target='_blank') KB链接
+    else if type == 'corporation'
+      - type = 'corp'
+    h5
+      a(href='https://kb.ceve-market.org/'+type+'/'+id target='_blank') KB链接
