change kb links to beta version

--- a/views/kb_cell.pug
+++ b/views/kb_cell.pug
@@ -5,4 +5,4 @@ mixin kb(type, id)
     else if type == 'corporation'
       - type = 'corp'
     h5
-      a(href='https://kb.ceve-market.org/'+type+'/'+id target='_blank') KB链接
+      a(href='https://beta.ceve-market.org/'+type+'/'+id target='_blank') KB链接
