--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,47 +1,60 @@
 nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
   .container-fluid
     a.navbar-brand.logo(href='/')
-      img(src='/images/icon.svg', width='40', height='40', alt='')
+      img(src='/images/icon.svg', width='30', height='30', alt='')
     a.navbar-brand(href='/') EVE户
     button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
-    div#navbarSupportedContent.collapse.navbar-collapse.row
-      ul.navbar-nav.mb-2.mb-lg-0.col-3.ps-3.pe-2
+    div#navbarSupportedContent.collapse.navbar-collapse
+      form(onsubmit= 'return false;' accept-charset="GB18030").d-flex.ms-1
+        input.form-control.me-2(type='search', name='name', id='autocomplete' placeholder='角色/公司/联盟' aria-label='Search')
+      ul.navbar-nav.me-auto.mb-2.mb-lg-0
         li.nav-item
-          a.nav-link(href='/') 首页
-        li.nav-item
-          a.nav-link(href='https://github.com/mintnick/evehu', target='_blank') Github
+          a.nav-link(href='https://github.com/mintnick/evehu', target='_blank') GitHub
         li.nav-item
           a.nav-link(href='/submit') 补充数据
-      form(onsubmit= 'return false;' accept-charset="GB18030").d-flex.col-5
-        input.form-control.me-2(type='search', name='name', id='autocomplete' placeholder='输入 角色/公司/联盟名称，稍等片刻' aria-label='Search')
-      ul.navbar-nav.mb-2.mb-lg-0.col-1
         li.nav-item
-          .btn-group
-            a.btn.btn-light(type="button" href="/info") 说明文档
-            button.btn.btn-secondary.dropdown-toggle.dropdown-toggle.split(type="button" data-bs-toggle="dropdown" aria-expanded="false")
-              span.visually-hidden Toggle Dropdown
-            ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
-              li
-                a.dropdown-item(href="/info#about") 关于EVE户
-              li
-                a.dropdown-item(href="/info#code") 代码
-              li
-                a.dropdown-item(href="/info#privacy") 数据隐私
-              li
-                a.dropdown-item(href="/info#delay") 数据延迟
-      ul.navbar-nav.mb-2.mb-lg-0.col-1
+          a.nav-link(href="/info") 说明文档
         li.nav-item
-          .btn-group
-            a.btn.btn-light(type="button" href="/projects") 其它项目
-            button.btn.btn-secondary.dropdown-toggle.dropdown-toggle.split(type="button" data-bs-toggle="dropdown" aria-expanded="false")
-              span.visually-hidden Toggle Dropdown
-            ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
-              li
-                a.dropdown-item(href="/projects#esam") ESAM
-              li
-                a.dropdown-item(href="/projects#timer") 晨曦增强表
-      ul.navbar-nav.mb-2.mb-lg-0.col-1
+          a.nav-link(href="/projects") 其它项目
         li.nav-item
-            a.btn.btn-success.donateBtn(type="button" href='/donate') 捐赠
+          a.nav-link(href="/donate") 捐赠
+      //- ul.navbar-nav.mb-2.mb-lg-0.col-3.ps-3.pe-2
+      //-   li.nav-item
+      //-     a.nav-link(href='/') 首页
+      //-   li.nav-item
+      //-     a.nav-link(href='https://github.com/mintnick/evehu', target='_blank') Github
+      //-   li.nav-item
+      //-     a.nav-link(href='/submit') 补充数据
+      //- form(onsubmit= 'return false;' accept-charset="GB18030").d-flex.col-5
+      //-   input.form-control.me-2(type='search', name='name', id='autocomplete' placeholder='输入 角色/公司/联盟名称，稍等片刻' aria-label='Search')
+      //- ul.navbar-nav.mb-2.mb-lg-0.col-1
+      //-   li.nav-item
+      //-     .btn-group
+      //-       a.btn.btn-light(type="button" href="/info") 说明文档
+      //-       button.btn.btn-secondary.dropdown-toggle.dropdown-toggle.split(type="button" data-bs-toggle="dropdown" aria-expanded="false")
+      //-         span.visually-hidden Toggle Dropdown
+      //-       ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
+      //-         li
+      //-           a.dropdown-item(href="/info#about") 关于EVE户
+      //-         li
+      //-           a.dropdown-item(href="/info#code") 代码
+      //-         li
+      //-           a.dropdown-item(href="/info#privacy") 数据隐私
+      //-         li
+      //-           a.dropdown-item(href="/info#delay") 数据延迟
+      //- ul.navbar-nav.mb-2.mb-lg-0.col-1
+      //-   li.nav-item
+      //-     .btn-group
+      //-       a.btn.btn-light(type="button" href="/projects") 其它项目
+      //-       button.btn.btn-secondary.dropdown-toggle.dropdown-toggle.split(type="button" data-bs-toggle="dropdown" aria-expanded="false")
+      //-         span.visually-hidden Toggle Dropdown
+      //-       ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
+      //-         li
+      //-           a.dropdown-item(href="/projects#esam") ESAM
+      //-         li
+      //-           a.dropdown-item(href="/projects#timer") 晨曦增强表
+      //- ul.navbar-nav.mb-2.mb-lg-0.col-1
+      //-   li.nav-item
+      //-       a.btn.btn-success.donateBtn(type="button" href='/donate') 捐赠
       
