--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,9 +17,9 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
 
   body.dark.d-flex.flex-column.min-vh-100
-    include toast.pug
+    //- include toast.pug
 
-    div.wrapper
+    div.wrapper.mb-3
       include navbar.pug
       
     div.container.mb-5
